2010-07-12 Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/521
	* Makefile.am:
	(SOURCEPATH_DIRS): The untainted srcdir
	version of generated should be used.

2010-07-12  Matthias Klose  <doko@ubuntu.com>

	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp
	(CreateInlineOop): Rename encoding to constant_encoding.

2010-07-12  Matthias Klose  <doko@ubuntu.com>

	* ports/hotspot/src/cpu/zero/vm/shark_globals_zero.hpp:
	Set MaxRAM.

2010-07-12 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-add-zero): Delete all created directories.
	(clean-add-debug-zero): Likewise.

2010-06-28 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clone-boot): Clone build directory too if
	it exists.
	(patch-jaxws): Fix typo.

2010-06-27 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(OPENJDK_BOOT_TREE): Set to patch-jaxws.stamp.
	(extract-jaxws): Don't depend circularly on
	OPENJDK_BOOT_TREE, just on the needed drops
	and OpenJDK tree.  Only extract source, move
	patching to another target due to dependencies.
	(patch-jaxws): Patching segment of extract-jaxws.
	Depends on patch-boot and thus on the openjdk-boot
	tree.
	(clean-patch-jaxws): Cleanup for above.

2010-06-25 Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/512:
	(extract-jaxws): Depend on $(OPENJDK_BOOT_TREE)
	and patch that tree instead.

2010-06-24 Andrew John Hughes  <ahughes@redhat.com>

	* patches/cacao/package-version.patch:
	Removed; breaks CACAO versioning.
	* Makefile.am:
	Update to new changeset with optimisation
	and version parsing fix.  Fix downloading.
	(CACAO_BASE_URL): Remove tip.tar.bz2 suffix.
	(CACAO_URL): Remove duplication of /hg/cacao/archive.
	(CACAO_VERSION): Bump to changeset which
	increases optimisation to -O2 not -O0.
	(CACAO_SHA256SUM): Updated for above.
	(download-cacao): Don't append CACAO_SRC_ZIP to URL.
	* patches/cacao/version-parsing.patch:
	Fix parsing of the minor version due to
	the update from 1.1.0pre to 1.1.0pre1 in